--- a/ui/frontend/src/main/src/app/inventur/bilanz/bilanz.component.html
+++ b/ui/frontend/src/main/src/app/inventur/bilanz/bilanz.component.html
@@ -1,3 +1,29 @@
-<p>
-  bilanz works!
-</p>
+<mat-card *ngIf="(bilanz$ | async) as bilanz; else queryError">
+  <mat-card-title><h1>Eröffnungsbilanz</h1></mat-card-title>
+  <mat-card-content>
+    <div layout="row" layout-align="space-between stretch" layout-padding layout-margin>
+      <div flex>
+        <h2>Aktiva</h2>
+        <h3>A. Anlagevermögen</h3>
+        <h3>B. Umlaufvermögen</h3>
+      </div>
+
+      <div flex>
+        <h2>Passiva</h2>
+        <h3>A. Eigenkapital</h3>
+        <h3>B. Fremdkapital</h3>
+      </div>
+    </div>
+    <div layout="row" layout-align="space-between stretch" layout-padding layout-margin>
+      <div flex class="bilanzsumme">Summe <span>{{bilanz.summe}}</span></div>
+      <div flex class="bilanzsumme">Summe <span>{{bilanz.summe}}</span></div>
+    </div>
+  </mat-card-content>
+  <mat-card-actions>
+    <a mat-button color="primary">Haushaltsbuch anlegen</a>
+    <a mat-button>Inventur wiederholen</a>
+  </mat-card-actions>
+</mat-card>
+<ng-template #queryError>
+  <app-query-error></app-query-error>
+</ng-template>
