dominium-24 Haushaltsbuch anlegen Rumpf für Schritt 'Dann werde ich die folgende privaten Eröffnungsbilanz vorgeschlagen haben:' implementiert

--- a/ui/frontend/src/main/src/app/inventur/bilanz/bilanz.component.html
+++ b/ui/frontend/src/main/src/app/inventur/bilanz/bilanz.component.html
@@ -2,16 +2,29 @@
   <mat-card-title><h1>Eröffnungsbilanz</h1></mat-card-title>
   <mat-card-content>
     <div layout="row" layout-align="space-between stretch" layout-padding layout-margin>
-      <div flex>
+      <div flex class="aktiva">
         <h2>Aktiva</h2>
         <h3>A. Anlagevermögen</h3>
+        <app-position *ngFor="let position of bilanz.aktiva.anlagevermoegen"
+                      [position]="position">
+        </app-position>
         <h3>B. Umlaufvermögen</h3>
+        <app-position *ngFor="let position of bilanz.aktiva.umlaufvermoegen"
+                      [position]="position">
+        </app-position>
       </div>
-
-      <div flex>
+      <!--<mat-divider flex></mat-divider>-->
+      <div flex class="passiva">
         <h2>Passiva</h2>
         <h3>A. Eigenkapital</h3>
+        <app-position *ngFor="let position of bilanz.passiva.eigenkapital"
+                      [position]="position">
+        </app-position>
         <h3>B. Fremdkapital</h3>
+        <app-position *ngFor="let position of bilanz.passiva.fremdkapital"
+                      [position]="position">
+        </app-position>
+
       </div>
     </div>
     <div layout="row" layout-align="space-between stretch" layout-padding layout-margin>
