dominium-24 Haushaltsbuch anlegen Rumpf für Schritt 'Dann werde ich die folgende privaten Eröffnungsbilanz vorgeschlagen haben:' implementiert

--- a/ui/frontend/src/main/src/app/inventur/bilanz/bilanz.component.html
+++ b/ui/frontend/src/main/src/app/inventur/bilanz/bilanz.component.html
@@ -33,7 +33,7 @@
         </section>
       </div>
     </div>
-    <section id="summen" layout="row" layout-align="space-between stretch" layout-padding layout-margin>
+    <section id="summen" layout="row" layout-align="space-between stretch" layout-margin>
       <app-zeile [betrag]="bilanz.summe" [text]="'Summe'" [summe]="'gesamtsumme'" flex></app-zeile>
       <app-zeile [betrag]="bilanz.summe" [text]="'Summe'" [summe]="'gesamtsumme'" flex></app-zeile>
     </section>
