--- a/ui/frontend/src/main/src/app/inventur/bilanz/bilanz.component.html
+++ b/ui/frontend/src/main/src/app/inventur/bilanz/bilanz.component.html
@@ -3,40 +3,10 @@
   <mat-card-content>
     <div layout="row" layout-align="space-between stretch" layout-padding layout-margin>
       <div flex class="aktiva">
-        <h2>Aktiva</h2>
-        <section id="anlagevermoegen">
-        <h3>A. Anlagevermögen</h3>
-        <app-position *ngFor="let position of bilanz.aktiva.anlagevermoegen"
-                      [position]="position">
-        </app-position>
-        </section>
-        <section id="umlaufvermoegen">
-          <h3>B. Umlaufvermögen</h3>
-          <app-position *ngFor="let position of bilanz.aktiva.umlaufvermoegen"
-                        [position]="position">
-          </app-position>
-        </section>
-        <section id="fehlbetrag">
-          <h3>C. Fehlbetrag</h3>
-          <app-position *ngFor="let position of bilanz.aktiva.fehlbetrag"
-                        [position]="position">
-          </app-position>
-        </section>
+        <app-aktiva [aktiva]='bilanz.aktiva'></app-aktiva>
       </div>
       <div flex class="passiva">
-        <h2>Passiva</h2>
-          <section id="eigenkapital">
-          <h3>A. Eigenkapital</h3>
-          <app-position *ngFor="let position of bilanz.passiva.eigenkapital"
-                        [position]="position">
-          </app-position>
-        </section>
-        <section id="fremdkapital">
-          <h3>B. Fremdkapital</h3>
-          <app-position *ngFor="let position of bilanz.passiva.fremdkapital"
-                        [position]="position">
-          </app-position>
-        </section>
+        <app-passiva [passiva]="bilanz.passiva"></app-passiva>
       </div>
     </div>
     <section id="summen" layout="row" layout-align="space-between stretch" layout-margin>
