dominium-56 Command Gateway und Query Gateway zur Wiederverwendung vorbereiten Refactoring: Redux funktional in Query

--- a/ui/frontend/src/main/src/app/inventur/inventar/inventar.component.html
+++ b/ui/frontend/src/main/src/app/inventur/inventar/inventar.component.html
@@ -1,6 +1,7 @@
 <mat-card *ngIf="(inventurState$ | async) as inventur; else queryError">
     <mat-card-title id="inventar">Inventar</mat-card-title>
     <mat-card-content id="positionen" class="positionen">
+        <p>Inventur ID {{inventur.inventurId}}</p>
         <ol style="list-style-type: upper-alpha">
             <li>
                 <h4>Vermögen</h4>
