dominium-58 Kategorien für die Inventurposten

--- a/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
+++ b/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
@@ -1,8 +1,14 @@
 <ng-container [formGroup]="posten">
     <mat-form-field flex>
+        <input matInput placeholder="Kategorie"
+               type="text" name="kategorie" formControlName="kategorie"
+               required appAutofocus>
+    </mat-form-field>
+
+    <mat-form-field flex>
         <input matInput placeholder="Position"
                type="text" name="position" formControlName="position"
-               required appAutofocus>
+               required>
     </mat-form-field>
 
     <ng-container [formGroup]="posten.get('waehrungsbetrag')">
