dominium-58 Neue Inventurgruppen Auflistung

--- a/ui/frontend/src/main/src/app/inventur/gruppe/gruppe.component.html
+++ b/ui/frontend/src/main/src/app/inventur/gruppe/gruppe.component.html
@@ -1,6 +1,8 @@
 <div>
     <app-inventur-position *ngFor="let position of positionen.controls; let i = index"
-                           [posten]="position" (geloescht)="loeschen(i)"
+                           [posten]="position"
+                           [kategorien]="kategorien"
+                           (geloescht)="loeschen(i)"
                            layout="row" layout-padding (keydown.delete)="loeschen(i)">
     </app-inventur-position>
 </div>
