dominium-60 Copyright Hinweis entfernt, Serialisierungsfehler behoben

--- a/ui/frontend/src/main/src/app/app.component.html
+++ b/ui/frontend/src/main/src/app/app.component.html
@@ -70,7 +70,7 @@
 
         <td-layout-footer>
             <div layout="row" layout-align="start center">
-                <span class="mat-caption">Copyright &copy; 2017 Teradata. All rights reserved
+                <span class="mat-caption">
                     Version {{(version$ | async)}}
                 </span>
             </div>
