--- a/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
+++ b/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
@@ -1,11 +1,7 @@
 <ng-container [formGroup]="posten">
 
     <mat-form-field flex>
-        <mat-select placeholder="Kategorie" formControlName="kategorie" name="kategorie" required appAutofocus>
-            <mat-option *ngFor="let kategorie of kategorien" [value]="kategorie.kategorie">
-                {{ kategorie.kategorie }}
-            </mat-option>
-        </mat-select>
+        <input matInput type="text" [value]="kategorie.kategorie" formControlName="kategorie" name="kategorie"/>
     </mat-form-field>
 
     <mat-form-field flex>
