--- a/ui/frontend/src/main/src/app/inventur/navigator/navigator.component.html
+++ b/ui/frontend/src/main/src/app/inventur/navigator/navigator.component.html
@@ -1,14 +1,14 @@
 <div layout="row" class="mat-typography">
-    <mat-card flex="30" *ngIf="(inventurId | async) as inventurId">
+    <mat-card flex="30" *ngIf="inventurId">
         <mat-card-title>
-            <h2>Inventurgruppen</h2>
+            <h2>Inventur-Gruppen</h2>
         </mat-card-title>
 
         <mat-nav-list>
             <h3 mat-subheader>Anlagevermögen</h3>
             <a mat-list-item
                [routerLink]="['/inventur', inventurId, 'anlagevermoegen', i]"
-               *ngFor="let kategorie of (gruppen | async)?.anlagevermoegen.kategorien; let i = index">
+               *ngFor="let kategorie of gruppen?.anlagevermoegen.kategorien; let i = index">
                 {{kategorie.kategorie}}
             </a>
         </mat-nav-list>
@@ -17,7 +17,7 @@
             <h3 mat-subheader>Umlaufvermögen</h3>
             <a mat-list-item
                [routerLink]="['/inventur', inventurId, 'umlaufvermoegen', i]"
-               *ngFor="let kategorie of (gruppen | async)?.umlaufvermoegen.kategorien; let i = index">
+               *ngFor="let kategorie of gruppen?.umlaufvermoegen.kategorien; let i = index">
                 {{kategorie.kategorie}}
             </a>
         </mat-nav-list>
@@ -26,7 +26,7 @@
             <h3 mat-subheader>Schulden</h3>
             <a mat-list-item
                [routerLink]="['/inventur', inventurId, 'schulden', i]"
-               *ngFor="let kategorie of (gruppen | async)?.schulden.kategorien; let i = index">
+               *ngFor="let kategorie of gruppen?.schulden.kategorien; let i = index">
                 {{kategorie.kategorie}}
             </a>
 
