dominium-61 Der Anwender wird bei der Inventur schrittweise durch die Kategorien geführt

--- a/ui/frontend/src/main/src/app/inventur/navigator/navigator.component.html
+++ b/ui/frontend/src/main/src/app/inventur/navigator/navigator.component.html
@@ -1,5 +1,5 @@
-<div layout="row" class="mat-typography">
-    <mat-card flex="30" *ngIf="inventurId">
+<div layout="row" class="mat-typography" *ngIf="gruppen">
+    <mat-card flex="30" *ngIf="inventurId" id="inventur-card">
         <mat-card-title>
             <h2>Inventur-Gruppen</h2>
         </mat-card-title>
