--- a/ui/frontend/src/main/src/app/inventur/inventur.component.html
+++ b/ui/frontend/src/main/src/app/inventur/inventur.component.html
@@ -1,32 +1,33 @@
-<app-navigator>
 
-    <mat-card *ngIf="(koordinate$ | async) as koordinate">
+<app-navigator inventurId="12345" [gruppen]="inventurGruppen$ | async" *ngIf="anzeigen$ | async"></app-navigator>
 
-        <mat-card-title>
-            <h2 title>Titel</h2>
-            <h3 subtitle>{{koordinate.untertitel}}</h3>
-        </mat-card-title>
 
-        <mat-card-content>
-            <p>Bevor Sie mit der Haushaltsbuchführung beginnen können müssen Sie eine Inventur
-                durchführen, damit die Anfangsbestände Ihrer Konten ermittelt werden können.
-                Bei der Inventur erfassen Sie Anlagevermögen, Umlaufvermögen und Schulden.</p>
+    <!--<mat-card *ngIf="(koordinate$ | async) as koordinate">-->
 
-            <form *ngIf="form$ | async as f" [formGroup]="f">
-                <app-inventur-gruppe [positionen]="f"></app-inventur-gruppe>
-            </form>
+        <!--<mat-card-title>-->
+            <!--<h2 title>Titel</h2>-->
+            <!--<h3 subtitle>{{koordinate.untertitel}}</h3>-->
+        <!--</mat-card-title>-->
 
-        </mat-card-content>
+        <!--<mat-card-content>-->
+            <!--<p>Bevor Sie mit der Haushaltsbuchführung beginnen können müssen Sie eine Inventur-->
+                <!--durchführen, damit die Anfangsbestände Ihrer Konten ermittelt werden können.-->
+                <!--Bei der Inventur erfassen Sie Anlagevermögen, Umlaufvermögen und Schulden.</p>-->
 
-        <mat-card-actions *ngIf="next$ | async as next">
-            <a mat-button color="primary"
-               [routerLink]="['/inventur', next.inventurId, next.gruppe, next.kategorie]">Weiter</a>
-        </mat-card-actions>
-        <button color="primary" mat-fab type="button" (click)="hinzufuegen()"
-                [disabled]="false"
-                matTooltip="Inventur-Position hinzufügen. Drücken Sie auch '+' auf der Tastatur."
-                style="position: fixed; right: 20px; bottom: 20px">
-            <mat-icon aria-label="Inventarposition hinzufügen">add</mat-icon>
-        </button>
-    </mat-card>
-</app-navigator>
+            <!--<form *ngIf="form$ | async as f" [formGroup]="f">-->
+                <!--<app-inventur-gruppe [positionen]="f"></app-inventur-gruppe>-->
+            <!--</form>-->
+
+        <!--</mat-card-content>-->
+
+        <!--<mat-card-actions *ngIf="next$ | async as next">-->
+            <!--<a mat-button color="primary"-->
+               <!--[routerLink]="['/inventur', next.inventurId, next.gruppe, next.kategorie]">Weiter</a>-->
+        <!--</mat-card-actions>-->
+        <!--<button color="primary" mat-fab type="button" (click)="hinzufuegen()"-->
+                <!--[disabled]="false"-->
+                <!--matTooltip="Inventur-Position hinzufügen. Drücken Sie auch '+' auf der Tastatur."-->
+                <!--style="position: fixed; right: 20px; bottom: 20px">-->
+            <!--<mat-icon aria-label="Inventarposition hinzufügen">add</mat-icon>-->
+        <!--</button>-->
+    <!--</mat-card>-->
