dominium-61 Der Anwender wird bei der Inventur schrittweise durch die Kategorien geführt

--- a/ui/frontend/src/main/src/app/inventur/inventur.component.html
+++ b/ui/frontend/src/main/src/app/inventur/inventur.component.html
@@ -1,5 +1,5 @@
 
-<app-navigator inventurId="12345" [gruppen]="inventurGruppen$ | async" *ngIf="anzeigen$ | async"></app-navigator>
+<app-navigator [inventurId]="inventurId$ | async" [gruppen]="inventurGruppen$ | async" *ngIf="anzeigen$ | async"></app-navigator>
 
 
     <!--<mat-card *ngIf="(koordinate$ | async) as koordinate">-->
