dominium-61 Der Anwender wird bei der Inventur schrittweise durch die Kategorien geführt

--- a/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
+++ b/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
@@ -1,5 +1,5 @@
 <span>{{posten.position}} {{posten.waehrungsbetrag.betrag}} {{posten.waehrungsbetrag.waehrung}}</span><br/>
-
+<button mat-button (click)="loeschen()">Entfernen</button>
 <!--<mat-form-field flex>-->
         <!--<input matInput placeholder="Position"-->
                <!--type="text" name="position" formControlName="position"-->
