--- a/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
+++ b/ui/frontend/src/main/src/app/inventur/gruppe/posten/posten.component.html
@@ -1,5 +1,8 @@
-<span>{{posten.position}} {{posten.waehrungsbetrag.betrag}} {{posten.waehrungsbetrag.waehrung}}</span><br/>
-<button mat-button (click)="loeschen()">Entfernen</button>
+<div layout="row" layout-align="space-between stretch" layout-padding layout-margin>
+    <span>{{posten.position}} {{posten.waehrungsbetrag.betrag}} {{posten.waehrungsbetrag.waehrung}}</span>
+    <button mat-icon-button (click)="loeschen()"><mat-icon aria-label="Inventarposition entfernen">delete</mat-icon></button>
+</div>
+
 <!--<mat-form-field flex>-->
         <!--<input matInput placeholder="Position"-->
                <!--type="text" name="position" formControlName="position"-->
